# VIABLAB

./: .gitignore  CMakeLists.txt  Memo.txt  Notes d'installation de ViabLab sous MAC.txt  README.md  notes.org
EXEC_DATA/: Aubergine_Conv.json  Aubergine_Eco.json  Banane_Conv.json  Banane_Eco.json  Canne_Conv.json  Canne_Eco.json  Carotte_Conv.json  Carotte_Eco.json  Chou_Conv.json  Chou_Eco.json  Concombre_Conv.json  Concombre_Eco.json  Giromon_Conv.json  Giromon_Eco.json  Haricot_Conv.json  Haricot_Eco.json  IgnamGrosseCaille_Conv.json  IgnamGrosseCaille_Eco.json  IgnamJaune_Conv.json  IgnamJaune_Eco.json  JachereCourte_Conv.json  JachereCourte_Eco.json  JachereLongue_Conv.json  JachereLongue_Eco.json  JachereMiLongue_Conv.json  JachereMiLongue_Eco.json  Laitue_Conv.json  Laitue_Eco.json  LesSpeculations.json  Manioc_Conv.json  Manioc_Eco.json  PatateDouce_Conv.json  PatateDouce_Eco.json  SimulationGaia.json  Tomate_Conv.json  Tomate_Eco.json  agroEcoDiv_D4.json  exploitation_BiParcelsSc3.json  exploitation_MonoParcelleMixte.json  exploitation_MonoParcelle_withAnnex.json  (+23 more)
INPUT/: ARKerU_params.json  CircleViab.json  Coeur_params.json  Demo_params.json  Equilibres4D_params.json  ExempleMultiDim_params.json  ExempleViabi2D_params.json  Julia2D_params.json  JuliaSets_params.json  Lac_params.json  LakeCollective_params.json  Language_params.json  LotkaVolterra_params.json  ModelExample_params.json  ModeleTrajectoire_params.json  PlusieursDimensions_params.json  README.md  SimplePopGrowth_params.json  VALIUM.json  VALIUM_hybrid.json  ValiumGaranti_2f.json  agroEcoDiv_D4.json  agroEcoDiv_MonoParcelle.json  agroEcoDiv_MonoParcelleAnnex.json  agroEcoDiv_MonoParcelleAnnexIncert.json  allParams.json  cp.json  hybridTest.json  labyrinthe_params.json  pareto_params.json  resilience.json  testPSP.json  testPSPBis.json  testPendule.json  timeMintest_params.json  zermelo_Lmin_params.json  zermelo_tmin_params.json
data/: DefaultValues.h  Julia2D_data.h  Julia2D_unused.h  ModelDataInclusion.h  PSP_data.h  PSP_dataBis.h  WeakDeclarations.h  agroEcoDiv_params_defs.h  agroEcoDiv_unused.h  dataAgroEcoDivMultiParcels.h  dataAgroEcoDivMultiParcelsD4.h  dataAgroEcoDivMultiParcelsD4_new.h  dataAgroEcoDivTest.h  equilibres4D_data.h  equilibres4D_unused.h  ex1Viabi2D_data.h  ex1Viabi2D_unused.h  ex1Viabi3D_data.h  ex1Viabi3D_unused.h  ex1Viabi4D_unused.h  ex1_Viabi_multiDim_data.h  ex2_EcoPolut_data.h  resilience_data.h  testPendule_data.h  zermelo_Lmin_data.h  zermelo_tmin_new.h
include/: CropData.h  CycleData.h  FarmDataGardener.h  Grid.h  GridBitSet.h  GridMicroMacro.h  ParametersManager.h  SysDyn.h  Viabi.h  ViabiBitSet.h  ViabiMicroMacro.h  defs.h
source/: .gitignore  .project  CMakeLists.txt
source/data/: ARKerU_data.cpp  ChasseurCueilleur_data.h  ChasseurCueilleur_unused.h  Cylinder_data.h  Cylinder_unused.h  ExempleViabi2D_data.cpp  ExempleViabi2D_data.h  Exemple_multiDim_data.cpp  Exemple_multiDim_data.h  IPGG_data.h  IPGG_unused.h  Julia2D_data.h  Julia2D_unused.h  ModelDataInclusion.h  PSP_dataBis.h  VALIUM.cpp  VALIUM_2f.cpp  VALIUM_Hybrid.cpp  ValiumGaranti_2f.cpp  WeakDeclarations.h  corentin_control_crop_comp_feed_synth_data_funct_traj_v3.h  corentin_control_traj_unused.h  corentin_no_control_feed_synth_data_funct_traj_v3.h  corentin_no_control_traj_unused.h  dataAgroEcoDivMonoParcelle.h  dataAgroEcoDivMonoParcelleAnnex.h  dataAgroEcoDivMonoParcelleAnnexIncert.h  dataAgroEcoDivMultiParcelsD4_new.h  data_Coeur.cpp  data_Demo.cpp  data_Julia2D.cpp  data_Lac.cpp  data_LacGaranti.h  data_LakeCollective.cpp  data_LotkaVolterra.cpp  data_SimplePopGrowth.cpp  data_circle.cpp  data_hybridTest.cpp  data_labyrinthe.cpp  data_labyrinthe.h  (+43 more)
source/include/: Bubble.h  ControlGrid.h  ControlPickCriteria.h  ControlPickStrategies.h  ControlPickStrategy.h  ControlPickStrategyName.h  ControlPicker.h  ControlPickerBitSet.h  CropData.h  CycleData.h  DefaultValues.h  DiscretPointImage.h  Either.h  Enums.h  FarmDataGardener.h  Grid.h  GridBitSet.h  GridBitSetHybrid.h  GridMicroMacro.h  HybridSysDyn.h  ModelParameters.h  ParametersManager.h  Params.h  SimpleSysDyn.h  SysDyn.h  SysdynBase.h  Trajectory.h  TrajectoryHelpers.h  TrajectoryPoints.h  TrajectoryPointsSimulation.h  TrajectoryPointsStorage.h  TrajectorySimulation.h  TrajectoryStorage.h  TychasticControlPickCriteria.h  TychasticControlPickStrategies.h  TychasticControlPickStrategy.h  TychasticControlPicker.h  TychasticControlPickerBitSet.h  TychasticSysDyn.h  TychasticTrajectory.h  (+16 more)
source/spdlog/: CMakeLists.txt
source/spdlog/include/spdlog/: common.h
source/spdlog/include/spdlog/cfg/: helpers-inl.h
source/src/: Bubble.cpp  ControlGrid.cpp  ControlPickCriteria.cpp  ControlPickStrategies.cpp  ControlPickStrategyName.cpp  ControlPicker.cpp  ControlPickerBitSet.cpp  CropData.cpp  CycleData.cpp  DiscretPointImage.cpp  FarmDataGardener.cpp  Grid.cpp  GridBitSet.cpp  GridBitSetHybrid.cpp  GridMicroMacro.cpp  HybridSysDyn.cpp  ModelParameters.cpp  ParametersManager.cpp  SimpleSysDyn.cpp  SysDyn.cpp  SysdynBase.cpp  TrajectoryHelpers.cpp  TrajectoryPointsSimulation.cpp  TrajectoryPointsStorage.cpp  TrajectorySimulation.cpp  TrajectoryStorage.cpp  TychasticControlPickCriteria.cpp  TychasticControlPickStrategies.cpp  TychasticControlPicker.cpp  TychasticControlPickerBitSet.cpp  TychasticSysDyn.cpp  TychasticTrajectorySimulation.cpp  TychasticTrajectoryStorage.cpp  TychePicker.cpp  ViabProblemFactory.cpp  Viabi.cpp  ViabiBitSet.cpp  ViabiBitSetHybrid.cpp  ViabiBitSetTrajectoryHelper.cpp  ViabiMicroMacro.cpp  (+6 more)
src/: CropData.cpp  CycleData.cpp  FarmDataGardener.cpp  Grid.cpp  GridBitSet.cpp  GridMicroMacro.cpp  ParametersManager.cpp  SysDyn.cpp  Viabi.cpp  ViabiBitSet.cpp  ViabiMicroMacro.cpp  initParams.h  main.cpp  main_main.cpp
